# web-search-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: PUBLISHING.md
searxng/: settings.yml.example
src/web_search_mcp/: __init__.py
src/web_search_mcp/config/: logging.py  settings.py
src/web_search_mcp/domains/search/: exceptions.py  models.py  services.py
src/web_search_mcp/entry_points/: main.py  mcp_server.py
src/web_search_mcp/infrastructure/clients/: searxng.py
