[project]
name = "web-search-searxng-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
[project.scripts]
web-search-mcp = "web_search_mcp.entry_points.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

